Closed
Bug 1367488
Opened 9 years ago
Closed 9 years ago
Scrollbar thumb inside iframe can still be cut off after being offscreen
Categories
(Core :: Panning and Zooming, defect, P3)
Tracking
()
VERIFIED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox53 | --- | unaffected |
| firefox54 | --- | unaffected |
| firefox55 | --- | verified |
People
(Reporter: botond, Assigned: botond)
References
Details
(Whiteboard: [gfx-noted])
Attachments
(1 file)
STR:
1. Load https://people-mozilla.org/~bballo/bug1359868.html
2. Unmaximize the Firefox window if necessary, and position it
so that there's space below it.
3. Grab the subframe's scroll thumb near the top.
4. Drag it down until mouse leaves the Firefox window, and then back up.
Expected results:
The scrollbar thumb is fully painted when you drag it back up.
Actual results:
The scrollbar thumb is only partially painted.
Updated•9 years ago
|
Blocks: async-scrollbar-drag
status-firefox53:
--- → unaffected
status-firefox54:
--- → unaffected
status-firefox55:
--- → affected
Priority: -- → P3
Whiteboard: [gfx-noted]
Version: unspecified → 55 Branch
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 2•9 years ago
|
||
| Assignee | ||
Comment 3•9 years ago
|
||
Getting this to work ended up requiring several changes:
- Capturing the current clip state on the scroll thumb's container layer,
so it doesn't clip the thumb's contents.
- Getting nsDisplayOwnLayer to override ShouldBuildLayerEvenIfInvisible()
to return true for thumb container layers, so it's rendered even if its
clipped bounds are empty.
- Overriding the animated geometry root for nsDisplayOwnLayer items
representing thumb layers to be the AGR created for the thumb.
With these changes things seem to be working well. I'll flag this for review if the Try push looks good.
| Assignee | ||
Comment 4•9 years ago
|
||
Looks like the patch is breaking:
layout/reftests/layers/pull-background-{1-6}.html
layout/reftests/layers/pull-background-displayport-{1-6}.html
layout/reftests/invalidation/layer-splitting-{5,6}.html
| Assignee | ||
Comment 5•9 years ago
|
||
(In reply to Botond Ballo [:botond] from comment #4)
> Looks like the patch is breaking:
Indeed, the patch was stomping all over attempts to merge content before and after a scrollframe with a layerized thumb into the same layer (and other optimizations like lifting background colors), because the thumb layer wasn't clipped to the slider track, so FrameLayerBuilder thought it could potentially move around arbitrarily. This is fixed in the updated patch.
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 7•9 years ago
|
||
| Comment hidden (mozreview-request) |
Comment 9•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8871975 [details]
Bug 1367488 - Pre-render offscreen portions of scrollbar thumbs inside an iframe.
https://reviewboard.mozilla.org/r/143508/#review148962
Attachment #8871975 -
Flags: review?(mstange) → review+
Comment 10•9 years ago
|
||
Pushed by bballo@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0d50eaa8bfa0
Pre-render offscreen portions of scrollbar thumbs inside an iframe. r=mstange
Comment 11•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment 12•9 years ago
|
||
Hi Botond,
I retested this issue and on Windows, there are some problems. I followed the steps from comment 0 but clicked on "Append". I see some flickers on the scrollbar when you move it up and down. The issue is reproducible only on Windows (tested on Win 7,10,8.1) with the latest Nightly 55.0a1 (2017-06-05).
On Mac and Ubuntu, the issue can't be reproduced.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 13•9 years ago
|
||
Let's file a new bug for the remaining issue.
Status: REOPENED → RESOLVED
Closed: 9 years ago → 9 years ago
Resolution: --- → FIXED
Comment 14•9 years ago
|
||
I filed bug https://bugzilla.mozilla.org/show_bug.cgi?id=1371299 for comment 12.
Comment 15•9 years ago
|
||
I verified this issue on Mac OS X 10.12, Ubuntu 16.04 x64 and Windows 10 x64 with FF Nightly 56.0a1(2017-07-03) and I can confirm the fix.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•