Bug 1367488 - Pre-render offscreen portions of scrollbar thumbs inside an iframe. r=mstange

MozReview-Commit-ID: LCBHnFJdGtp